# juego-rpg

./: .gitignore  CMakeLists.txt  README.md  main.cpp
calabozorpg/: AngelDungeon.pro  CMakeLists.txt  enemigo.cpp  enemigo.h  jugador.cpp  jugador.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
calabozorpg/engine/: character.cpp  character.h  enemy.cpp  enemy.h  floor.cpp  floor.h  game.cpp  game.h  items.cpp  items.h  save.cpp  save.h  types.h
calabozorpg/ui/: mainwindow.cpp  mainwindow.h  mainwindow.ui
